# RFID_Inventory

./: .env.example  .gitignore  KEONN_config.json  README.md  TAG_READ.js  backend.py  configure.py  core.py  detect.py  handler.py  main.py  models.py  mosquitto.conf  mqtt_db.py  parser.py  proxy_fastapi.py  pyproject.toml  seeder.py  tortorm.py
backend/: .env.example  configure.py  pyproject.toml
backend/tools/: liveobjects.py
config/: KEONN_config.json  readmode.json
server/: __init__.py
server/api/: __init__.py  _base.py  configure.py  device.py  discover.py  location.py  tag.py  v1.py
server/core/: __init__.py  mqtt.py  parser.py
server/logging/: __init__.py  main.py
server/mock/: mqtt_spam.py  seeder.py
server/models/: __init__.py  models.py
server/utils/: KEONN_interface.py  configure.py  parser.py  proxy_fastapi.py  ws_redirector.py
server/utils/device_conf/: service.json
server/utils/device_conf/events/: SYSTEM_1MINUTE_TIMER@status.js
server/websockets/: __init__.py  chat.html  routes.py
tools/: compose.yaml  seeder.py
