[project]
name = "IOT"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.3.0",
    "python-dotenv>=1.0.1",
    "tortoise-orm[asyncmy]>=0.24.0",
    "requests>=2.32.3",
    "zeroconf>=0.143.0",
    "fastapi-proxy-lib[standard]>=0.2.0",
    "fastapi[standard]>=0.115.8",
]
